@@ -1,3 +1,10 @@
+2013-02-25  Siddhesh Poyarekar  <siddhesh@redhat.com>
+
+	* sysdeps/powerpc/powerpc32/power4/fpu/mpa.c (__mp_dbl): Sync
+	up changes with default code.
+	* sysdeps/powerpc/powerpc64/power4/fpu/mpa.c (__mp_dbl):
+	Likewise.
+
 2013-02-24  Allan McRae  <allan@archlinux.org>
 
 	* manual/socket.texi (The Internet Namespace): Order menu items
